# yojimbo_plugin

./: .gitmodules  CMakeLists.txt  README.md  conanfile.txt
include/: Yojimbo.hpp  YojimboFactory.hpp  YojimboPlugin.hpp
libsodium/: CMakeLists.txt
src/: Yojimbo.cpp  YojimboFactory.cpp  YojimboPlugin.cpp
yojimbo/: CMakeLists.txt  compile.sh
